err/scmutils.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/scmutils'...
Compiling './lib/python3.5/site-packages/scmutils/ThreadPool.py'...
***   File "./lib/python3.5/site-packages/scmutils/ThreadPool.py", line 136
    print counter
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/scmutils/check_mw_md5.py'...
***   File "./lib/python3.5/site-packages/scmutils/check_mw_md5.py", line 251
    print usage_s.safe_substitute(param)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scmutils/checkcopiedbranchfpga.py'...
***   File "./lib/python3.5/site-packages/scmutils/checkcopiedbranchfpga.py", line 1105
    print usage_s.safe_substitute(param)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scmutils/sync_to_cfg.py'...
***   File "./lib/python3.5/site-packages/scmutils/sync_to_cfg.py", line 100
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/scmutils-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
